--- a/.github/workflows/docker-build-and-publish-aws.yml
+++ b/.github/workflows/docker-build-and-publish-aws.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Log in to Amazon ECR
         id: login-ecr
@@ -26,14 +26,14 @@ jobs:
 
       - name: Build, tag, and push Docker image
         env:
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+          ECR_REGISTRY_URI: ${{ secrets.ECR_REGISTRY_URI }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
           # Build the Docker image
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY_URI:$IMAGE_TAG .
           
           # Tag the Docker image
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$IMAGE_TAG
+          docker tag $ECR_REGISTRY_URI:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/${ECR_REGISTRY_URI}:$IMAGE_TAG
           
           # Push the Docker image to ECR
-          docker push ${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$IMAGE_TAG
+          docker push ${{ steps.login-ecr.outputs.registry }}/${ECR_REGISTRY_URI}:$IMAGE_TAG
